_attachments/styles/infinitemaze.css
body {
	width: 100%;
	margin: 0;
	font: 12pt Arial, sans-serif;
}

#maze, #main, #app, .maze {
	overflow: hidden;
	background-color: black; /*#777;*/
}

#overlay {
	background: black;
	opacity: .7;
	z-index: 6;
}

/* Windows (modal dialogues) */

.window {
	position: absolute;
	top: 50%;
	left: 50%;
	width: 452px;
	max-height: 250px;
	margin-left: -262px;
	margin-top: -137px;
	padding: 24px 36px;
	overflow: auto;
	border: 1px solid #999;
	border-radius: 1em;
	        box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.40);
	   -moz-box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.40);
	-webkit-box-shadow: 10px 10px 8px rgba(0, 0, 0, 0.40);
	background: white;
	background: rgba(255, 255, 255, 0.9);
	z-index: 7;
}
.window h1 {
	margin: .25em 0;
}
.window h2 {
	font-size: 125%;
}
.window h1:first-child, .window h2:first-child {
	margin-top: 0;
}
.window p {
	margin: .5em 0;
}

/* Welcome window */

#welcome {
	text-align: center;
}
#welcome .subtitle {
}
#welcome em {
	font-style: normal;
	color: #096;
}
#welcome h2, #welcome ul {
	text-align: left;
}
#welcome #enter-btn {
	background: #9e6;
	border: 1px solid #0c0;
	font-size: 1em;
	padding: 6px;
	color: #030;
	cursor: pointer;
	border-radius: 6px;
	outline: none;
}
#welcome #enter-btn:hover {
	background: #9f6;
	border-color: #090;
}
#welcome #enter-btn:active {
	background: #3e3;
	color: #010;
}

/* Header */

#header {
	position: absolute;
	top: 0;
	right: 0;
	background: #eee;
	z-index: 5;
	border: 3px #999;
	border-style: none none solid solid;
	padding: 2px 5px;
}
.left {
	float: left;
}
.right {
	float: right;
}
#login-signup-link {
	color: #06c;
	text-decoration: none;
}
#login-signup-link:hover {
	color: #09f;
}
#login-signup-btn {
	/*border: 1px solid #0f0;
	background: #cf3;
	font-size: .9em;
	padding: 1px;*/
}
#app.logged-in .logout-only, #app:not(.logged-in) .login-only {
	display: none;
}

/* Login/Signup window */

#login-signup-window {
	/* display: none; */
	background-color: white;
	background-color: rgba(255, 255, 255, 0.96);
}
#login-signup-window .left {
	width: 50%;
	float: left;
}
#login-signup-window .right {
	position: absolute;
	left: 50%;
	right: 0px;
	padding-left: 1em;
}
#login-signup-window hr {
	border: none;
	border-right: 2px solid #ccc;
	top: 1.5em;
	bottom: 1.5em;
	left: 50%;
	position: absolute;
}
.error {
	color: #c40;
}
.loading {
	background-image: url(../images/loading.gif);
	background-repeat: no-repeat;
	background-position: 98% 4%;
}

/* Tile boxes */

.tile-box {
	position: absolute;
	border: 1px solid rgba(200, 200, 200, 0.4);
	margin: -1px;
	text-align: center;
	z-index: 4;
}
.tile-box.get-here, .tile-box.draw-here {
	cursor: auto;
}
.tile-box div {
	padding: 100px 0;
}
.tile-box.get-here {
	color: white;
}
.tile-box.draw-here {
	color: #4d4; /*#00b*/
}
.tile-box.drawing {
	cursor: crosshair;
	border: 1px dotted rgba(200, 200, 200, 0.6);
}
.tile-box.drawing:hover {
	opacity: .3;
}

/* Editor toolbox */

#editor-toolbox {
	top: auto;
	height: 108px; /* 120 total */
	background-color: #ccc;
	border-top: 2px solid black;
	padding: 5px;
	z-index: 5;
}

#rules {
	width: 45%;
	height: 100%;
	float: left;
	/*font-size: 16px;*/
	border-right: 1px solid #888;
	padding-right: 4px;
	margin-right: 4px;
}

#rules h3 {
	margin: .5em 0;
}

#toolbox-palettes {
	float: left;
}

.toolbox-palette {
	display: inline-block;
	text-align: center;
}

.toolbox-palette .picker {
	margin: 4px 2px 4px 4px;
}

#save-btns {
	margin-top: 8px;
}

.picker {
	border: 3px solid #999;
	background-color: black;
	border-spacing: 1px;
}

.picker td {
	font-size: 18px;
	width: 1em;
	height: 1em;
	background-color: #fff;
	cursor: pointer;
}

.picker td.selected {
	outline: 1px dotted white;
}

#size-picker td {
	line-height: 1em;
	vertical-align: middle;
}

#size-picker .circle {
	display: block;
	margin: auto;
	background-color: black;
	z-index: -1;
}

/* Account Settings Window */

#settings-form {
	float: left;
	text-align: right;
}
#settings-username {
	text-decoration: underline;
	display: inline-block;
	text-align: left;
}
#settings-window .field {
	width: 150px;
}
#settings-form + * {
	clear: both;
}

